# nimu-matrix

./: .gitignore  README.md
include/nimu/matrix/: matrix_static.hpp
test/: CMakeLists.txt  build.sh  matrix_static.cpp  random.cpp  random.hpp  test.sh
